# aphrodite-fork

./: .gitignore  .pre-commit-config.yaml  =3.26  CMakeLists.txt  Dockerfile  Dockerfile.cpu  Dockerfile.neuron  Dockerfile.openvino  Dockerfile.xpu  README.md  build_and_upload_docker.sh  env.py  environment.yaml  mypy.ini  pyproject.toml  requirements-build.txt  requirements-common.txt  requirements-cpu.txt  requirements-cuda.txt  requirements-neuron.txt  requirements-openvino.txt  requirements-test.txt  requirements-xpu.txt  setup.py  test_import.py  update-runtime.sh  use_existing_torch.py
.github/workflows/: deploy.yml  publish.yml  ruff.yml
aphrodite/: __init__.py  _custom_ops.py  _ipex_ops.py  _version.py  collect_env.py  forward_context.py  scalar_type.py  tracing.py  version.py
aphrodite/adapter_commons/: models.py
aphrodite/aphrodite_flash_attn/: __init__.py  flash_attn_interface.py
aphrodite/assets/: audio.py  base.py  image.py  video.py
aphrodite/attention/: layer.py  selector.py
aphrodite/benchmarks/: datasets.py  endpoint_request_func.py  latency.py  serve.py  throughput.py  utils.py
aphrodite/common/: beam_search.py  block.py  config.py  connections.py  env_override.py  envs.py  jsontree.py  logger.py  logits_processor.py  outputs.py  pooling_params.py  sampling_params.py  sequence.py  test_utils.py  utils.py
aphrodite/compilation/: activation_quant_fusion.py  aphrodite_inductor_pass.py  backends.py  compiler_interface.py  decorators.py  fix_functionalization.py  fusion.py  fx_utils.py  inductor_pass.py  monitor.py  multi_output_match.py  noop_elimination.py  pass_manager.py  sequence_parallelism.py  torch25_custom_graph_pass.py  wrapper.py
aphrodite/device_allocator/: cumem.py
aphrodite/distributed/: communication_op.py  kv_events.py  parallel_state.py  utils.py
aphrodite/endpoints/: chat_utils.py  cli.py  llm.py  score_utils.py  ssl.py  utils.py
aphrodite/engine/: aphrodite_engine.py  args_tools.py  async_aphrodite.py  metrics.py  metrics_types.py  protocol.py
aphrodite/executor/: executor_base.py  gpu_executor.py  mp_distributed_executor.py  msgspec_utils.py  multiproc_gpu_executor.py  multiproc_worker_utils.py  openvino_executor.py  ray_distributed_executor.py  ray_gpu_executor.py  ray_utils.py  uniproc_executor.py
aphrodite/hpu_extension/: awq_hpu.py  cache_ops.py  environment.py  flags.py  gptq_hpu.py  kernels.py  ops.py  profiler.py  scales.py  utils.py
aphrodite/inputs/: __init__.py  data.py  parse.py  preprocess.py  registry.py
aphrodite/lora/: fully_sharded_layers.py  layers.py  lora.py  models.py  peft_helper.py  punica.py  request.py  resolver.py  utils.py  worker_manager.py
aphrodite/modeling/: _custom_op.py  parameter.py  pooling_metadata.py  sampling_metadata.py  utils.py
aphrodite/multimodal/: __init__.py  audio.py  base.py  hasher.py  image.py  inputs.py  parse.py  processing.py  profiling.py  registry.py  utils.py  video.py
aphrodite/plugins/: __init__.py
aphrodite/processing/: block_manager.py  block_manager_v1.py  block_manager_v2.py  interfaces.py  placeholder_block_space_manager.py  scheduler.py
aphrodite/profiler/: layerwise_profile.py
aphrodite/prompt_adapter/: models.py  request.py  utils.py  worker_manager.py
aphrodite/quantization/: __init__.py  aqlm.py  awq.py  awq_marlin.py  base_config.py  bitblas.py  bitsandbytes.py  deepspeedfp.py  eetq.py  experts_int8.py  fbgemm_fp8.py  fp6.py  fp8.py  gguf.py  gptq.py  gptq_bitblas.py  gptq_marlin.py  gptq_marlin_24.py  hqq_marlin.py  ipex_quant.py  kv_cache.py  marlin.py  modelopt.py  moe_wna16.py  neuron_quant.py  ptpc_fp8.py  qqq.py  quip.py  squeezellm.py  torchao.py  tpu_int8.py  vptq.py
aphrodite/reasoning/: __init__.py  abs_reasoning_parsers.py  deepseek_r1_reasoning_parser.py  granite_reasoning_parser.py  qwen3_reasoning_parser.py
aphrodite/server/: launch.py
aphrodite/spec_decode/: batch_expansion.py  draft_model_runner.py  interfaces.py  medusa_worker.py  metrics.py  mlp_speculator_worker.py  mqa_scorer.py  multi_step_worker.py  ngram_worker.py  proposer_worker_base.py  smaller_tp_proposer_worker.py  spec_decode_worker.py  target_model_runner.py  top1_proposer.py  util.py
aphrodite/transformers_utils/: __init__.py  config.py  detokenizer.py  detokenizer_utils.py  processor.py  s3_utils.py  tokenizer.py  tokenizer_base.py  tokenizer_group.py  utils.py
aphrodite/triton_utils/: __init__.py  importing.py  libentry.py
aphrodite/usage/: usage_lib.py
aphrodite/v1/: kv_cache_interface.py  outputs.py  request.py  serial_utils.py  utils.py
aphrodite/worker/: cache_engine.py  cpu_enc_dec_model_runner.py  cpu_model_runner.py  cpu_pooling_model_runner.py  cpu_worker.py  embedding_model_runner.py  enc_dec_model_runner.py  hpu_model_runner.py  hpu_worker.py  model_runner.py  model_runner_base.py  multi_step_hpu_worker.py  multi_step_model_runner.py  multi_step_tpu_worker.py  multi_step_worker.py  neuron_model_runner.py  neuron_worker.py  openvino_model_runner.py  openvino_worker.py  pooling_model_runner.py  tpu_model_runner.py  tpu_worker.py  utils.py  worker.py  worker_base.py  xpu_model_runner.py  xpu_worker.py
cmake/: cpu_extension.cmake  utils.cmake
cmake/external_project/: flashmla.cmake
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/.vitepress/: config.mts
examples/: offline_profile.py  xqa_attn.py
examples/audio/: audio_example.py
examples/chat_templates/: llama_3.2_json_tool.jinja  mistral_parallel_tool.jinja
kernels/: activation_kernels.cu  cache_kernels.cu  cuda_utils_kernels.cu  cuda_view.cu  cumem_allocator.cpp  dispatch_utils.h  layernorm_kernels.cu  layernorm_quant_kernels.cu  ops.h  pos_encoding_kernels.cu  torch_bindings.cpp  type_convert.cuh
kernels/flash_attention/: CMakeLists.txt
kernels/flash_attention/flash_attn/: flash_api.cpp  flash_api_sparse.cpp
requirements/: common.txt  docs.txt  test.txt
tests/: conftest.py  test_config.py  test_inputs.py  test_utils.py  utils.py
tools/: ccache_status.sh  check_repo.sh  mypy.sh  png-lint.sh  report_build_time_ninja.py  setup_ccache.sh  shellcheck.sh
(+883 files in other folders)
